examples/httpbin-istio/httpbin-service.yml
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  labels:
    app: httpbin
    service: httpbin
spec:
  selector:
    app: httpbin
  ports:
    - protocol: TCP
      port: 9991
      targetPort: 80
