examples/httpbin-istio/istio-virtualservice.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpbin
spec:
  gateways:
  - httpbin-gateway
  hosts:
  - "*"
  http:
  - route:
    - destination:
        host: httpbin
        port:
          number: 9991
